feat:Se empieza a dar estilo a navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=ç, initial-scale=1.0">
     <title>portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+
+    <header class="header">
+     <a href="#home" class="logo">Astrid <span>Viloria</span></a>
+
+     <i class='bx bx-menu' id="menu-icon"></i>
+
+     <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#educacion">Education</a>
+        <a href="#services">Services</a>
+        <a href="#contac">Contact</a>
+     </nav>
+
+
+
+
+    </header>
     
 
 
