--- a/index.html
+++ b/index.html
@@ -1,33 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=ç, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=ç, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
-     <a href="#home" class="logo">Astrid <span>Viloria</span></a>
+      <a href="#home" class="logo">Astrid <span>Viloria</span></a>
 
-     <i class='bx bx-menu' id="menu-icon"></i>
+      <i class="bx bx-menu" id="menu-icon"></i>
 
-     <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#educacion">Education</a>
-        <a href="#services">Services</a>
-        <a href="#contac">Contact</a>
-     </nav>
-
-
-
-
+      <nav class="navbar">
+        <a href="#home" class="active">Incio</a>
+        <a href="#educacion">Educación</a>
+        <a href="#services">Servicios</a>
+        <a href="#contac">Contacto</a>
+      </nav>
     </header>
-    
 
+    <section class="home" id="home">
+      <div class="home-content">
+        <h1>Hola, Soy <span>Astrid</span></h1>
+        <h3 class="text-animation">Yo soy una <span></span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+          autem illo optio veniam neque provident corporis. Ea, illum animi.
+          Sapiente ab adipisci beatae asperiores ullam, quia ducimus
+          praesentium? Ex, ab?
+        </p>
+
+        <div class="social-icons">
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class="bx bxl-github"></i></a>
+        </div>
+
+        <div class="btn-group">
+          <a href="#" class="btn">salario creo</a>
+          <a href="#contact" class="btn">Contacto</a>
+        </div>
+      </div>
+
+      <div class="home-img">
+        <img src="img/yo.jpg" alt="yo" />
+      </div>
+    </section>
+
+<section class="education" id="education">
+<h2 class="heading">Educación</h2>
+
+<div class="timeline-items">
+    <div class="timeline-item">
+        <div class="timeline-dot">
+            <div class="timeline-data">2021</div>
+            <div class="timeline-content">
+                <h3>High School</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem exercitationem ad atque error quod natus esse adipisci illum quae quibusdam? Eaque, expedita. Neque qui quidem consequuntur esse corrupti voluptatibus reprehenderit.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="timeline-item">
+        <div class="timeline-dot">
+            <div class="timeline-data">2022</div>
+            <div class="timeline-content">
+                <h3>University</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem exercitationem ad atque error quod natus esse adipisci illum quae quibusdam? Eaque, expedita. Neque qui quidem consequuntur esse corrupti voluptatibus reprehenderit.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="timeline-item">
+        <div class="timeline-dot">
+            <div class="timeline-data">2023</div>
+            <div class="timeline-content">
+                <h3>Internship</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem exercitationem ad atque error quod natus esse adipisci illum quae quibusdam? Eaque, expedita. Neque qui quidem consequuntur esse corrupti voluptatibus reprehenderit.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="timeline-item">
+        <div class="timeline-dot">
+            <div class="timeline-data">2024</div>
+            <div class="timeline-content">
+                <h3>job 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem exercitationem ad atque error quod natus esse adipisci illum quae quibusdam? Eaque, expedita. Neque qui quidem consequuntur esse corrupti voluptatibus reprehenderit.</p>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+
+</section>
 
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
